--- a/series.conf
+++ b/series.conf
@@ -27037,6 +27037,7 @@
 	patches.suse/x86-mm-split-vmalloc_sync_all.patch
 	patches.suse/net_sched-keep-alloc_hash-updated-after-hash-allocat.patch
 	patches.suse/hsr-use-rcu_read_lock-in-hsr_get_node_-list-status.patch
+	patches.suse/hsr-add-restart-routine-into-hsr_get_node_list.patch
 	patches.suse/NFC-fdp-Fix-a-signedness-bug-in-fdp_nci_send_patch.patch
 	patches.suse/net-ena-add-pci-shutdown-handler-to-allow-safe-kexec.patch
 	patches.suse/Input-raydium_i2c_ts-fix-error-codes-in-raydium_i2c_.patch
