--- a/series.conf
+++ b/series.conf
@@ -27042,6 +27042,7 @@
 	patches.suse/net_sched-cls_route-remove-the-right-filter-from-has.patch
 	patches.suse/net-mvneta-Fix-the-case-where-the-last-poll-did-not-.patch
 	patches.suse/vxlan-check-return-value-of-gro_cells_init.patch
+	patches.suse/hsr-fix-general-protection-fault-in-hsr_addr_is_self.patch
 	patches.suse/NFC-fdp-Fix-a-signedness-bug-in-fdp_nci_send_patch.patch
 	patches.suse/net-ena-add-pci-shutdown-handler-to-allow-safe-kexec.patch
 	patches.suse/Input-raydium_i2c_ts-fix-error-codes-in-raydium_i2c_.patch
