--- a/series.conf
+++ b/series.conf
@@ -27104,6 +27104,7 @@
 	patches.suse/ath9k-Handle-txpower-changes-even-when-TPC-is-disabl.patch
 	patches.suse/s390-qeth-support-net-namespaces-for-l3-devices
 	patches.suse/net-dsa-bcm_sf2-Fix-overflow-checks.patch
+	patches.suse/ipv4-fix-a-RCU-list-lock-in-fib_triestat_seq_show.patch
 	patches.suse/crypto-tcrypt-fix-printed-skcipher-a-sync-mode.patch
 	patches.suse/crypto-arm64-sha-ce-implement-export-import.patch
 	patches.suse/crypto-mxs-dcp-fix-scatterlist-linearization-for-has.patch
