--- a/series.conf
+++ b/series.conf
@@ -27106,6 +27106,7 @@
 	patches.suse/net-dsa-bcm_sf2-Fix-overflow-checks.patch
 	patches.suse/ipv4-fix-a-RCU-list-lock-in-fib_triestat_seq_show.patch
 	patches.suse/sctp-fix-refcount-bug-in-sctp_wfree.patch
+	patches.suse/sctp-fix-possibly-using-a-bad-saddr-with-a-given-dst.patch
 	patches.suse/crypto-tcrypt-fix-printed-skcipher-a-sync-mode.patch
 	patches.suse/crypto-arm64-sha-ce-implement-export-import.patch
 	patches.suse/crypto-mxs-dcp-fix-scatterlist-linearization-for-has.patch
