--- a/supported.conf
+++ b/supported.conf
@@ -2496,6 +2496,9 @@
 +base		drivers/virtio/virtio_mmio
 +base		drivers/virtio/virtio_pci
 +base		drivers/virtio/virtio_ring
+		drivers/w1/wire
+		drivers/w1/masters/w1-gpio
+		drivers/w1/slaves/w1_therm
 		drivers/watchdog/acquirewdt					# Acquire Inc. Single Board Computer Watchdog Timer driver
 		drivers/watchdog/advantechwdt					# Advantech Single Board Computer WDT driver
 		drivers/watchdog/alim1535_wdt					# ALi M1535 PMU Watchdog Timer driver
