--- a/series.conf
+++ b/series.conf
@@ -53193,6 +53193,7 @@
 	patches.suse/0001-drm-Remove-PageReserved-manipulation-from-drm_pci_al.patch
 	patches.suse/0001-drm-sun4i-dsi-Remove-unused-drv-from-driver-context.patch
 	patches.suse/drm-sun4i-dsi-Use-NULL-to-signify-no-panel.patch
+	patches.suse/0002-drm-sun4i-dsi-Allow-binding-the-host-without-a-panel.patch
 	patches.suse/drm-amd-display-Fix-wrongly-passed-static-prefix.patch
 	patches.suse/drm-v3d-Replace-wait_for-macros-to-remove-use-of-msl.patch
 	patches.suse/0001-Revert-drm-panel-simple-Add-support-for-Sharp-LQ150X.patch
