--- a/series.conf
+++ b/series.conf
@@ -53402,6 +53402,7 @@
 	patches.suse/ALSA-hda-Skip-controller-resume-if-not-needed.patch
 	patches.suse/ALSA-hda-Explicitly-permit-using-autosuspend-if-runt.patch
 	patches.suse/ALSA-hda-call-runtime_allow-for-all-hda-controllers.patch
+	patches.suse/0008-drm-amd-powerplay-force-the-trim-of-the-mclk-dpm_lev.patch
 	patches.suse/scsi-qla2xxx-Fix-regression-warnings.patch
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
