--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1512,3 +1512,4 @@ ee84f19cbbe9cf7cba2958acb03163fed3ecbb0f # not a regression - Fixes tag is wrong
 d7a47b96ed1102551eb7325f97937e276fb91045 # not a regression - Fixes tag is wrong
 f9bf8adb55cd5a357b247a16aafddf8c97b276e0 # not a regression - Fixes tag is wrong
 86d32f9a7c54ad74f4514d7fef7c847883207291 # not a regression - Fixes tag is wrong
+837b63e6087838d0f1e612d448405419199d8033 # Duplicate of c725161924f9a5872a3e53b73345a6026a5c170e: drm/i915: Program MBUS with rmw during initialization
