--- a/series.conf
+++ b/series.conf
@@ -8142,6 +8142,7 @@
 	patches.suse/0036-phy-rockchip-inno-usb2-Replace-the-extcon-API.patch
 	patches.suse/nvmem-core-Add-nvmem_cell_read_u32.patch
 	patches.suse/nvmem-include-linux-err.h-from-header.patch
+	patches.suse/drivers-w1-add-hwmon-support-structures.patch
 	patches.suse/edac-sb_edac-classify-memory-mirroring-modes.patch
 	patches.suse/05-edac-pnd2-build-in-a-minimal-sideband-driver-for-apollo-lake.patch
 	patches.suse/0002-EDAC-thunderx-Fix-error-handling-path-in-thunderx_lm.patch
