--- a/series.conf
+++ b/series.conf
@@ -53507,6 +53507,7 @@
 	patches.suse/msft-hv-2047-x86-Hyper-V-Trigger-crash-enlightenment-only-once-du.patch
 	patches.suse/msft-hv-2048-x86-Hyper-V-Report-crash-register-data-or-kmsg-befor.patch
 	patches.suse/msft-hv-2049-x86-Hyper-V-Report-crash-register-data-when-sysctl_r.patch
+	patches.suse/msft-hv-2050-x86-Hyper-V-Report-crash-data-in-die-when-panic_on_o.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/xsk-Add-missing-check-on-user-supplied-headroom-size.patch
