--- a/series.conf
+++ b/series.conf
@@ -27354,6 +27354,7 @@
 	patches.suse/cifs-smbd-Check-send-queue-size-before-posting-a-send.patch
 	patches.suse/cifs-smbd-Update-receive-credits-before-sending-and-deal-with-cred.patch
 	patches.suse/cifs-Allocate-crypto-structures-on-the-fly-for-calculating-signatur.patch
+	patches.suse/cifs-smbd-Properly-process-errors-on-ib_post_send.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
