--- a/series.conf
+++ b/series.conf
@@ -27355,6 +27355,7 @@
 	patches.suse/cifs-smbd-Update-receive-credits-before-sending-and-deal-with-cred.patch
 	patches.suse/cifs-Allocate-crypto-structures-on-the-fly-for-calculating-signatur.patch
 	patches.suse/cifs-smbd-Properly-process-errors-on-ib_post_send.patch
+	patches.suse/cifs-smbd-Do-not-schedule-work-to-send-immediate-packet-on-every-r.patch
 	patches.suse/tracing-fix-the-race-between-registering-snapshot-event-trigger-and-triggering-snapshot-operation.patch
 	patches.suse/mac80211_hwsim-Use-kstrndup-in-place-of-kasprintf.patch
 	patches.suse/ALSA-ctxfi-Remove-unnecessary-cast-in-kfree.patch
