--- a/series.conf
+++ b/series.conf
@@ -27367,6 +27367,7 @@
 	patches.suse/ALSA-hda-Keep-the-controller-initialization-even-if-.patch
 	patches.suse/scsi-qla2xxx-Fix-regression-warnings.patch
 	patches.suse/scsi-sg-add-sg_remove_request-in-sg_common_write
+	patches.suse/cifs-dump-the-session-id-and-keys-also-for-SMB2-sessions.patch
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
