--- a/series.conf
+++ b/series.conf
@@ -27368,6 +27368,7 @@
 	patches.suse/scsi-qla2xxx-Fix-regression-warnings.patch
 	patches.suse/scsi-sg-add-sg_remove_request-in-sg_common_write
 	patches.suse/cifs-dump-the-session-id-and-keys-also-for-SMB2-sessions.patch
+	patches.suse/cifs-improve-read-performance-for-page-size-64KB-cache-strict-v.patch
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
