--- a/series.conf
+++ b/series.conf
@@ -27408,6 +27408,7 @@
 	patches.suse/USB-hub-Fix-handling-of-connect-changes-during-sleep.patch
 	patches.suse/USB-sisusbvga-Change-port-variable-from-signed-to-un.patch
 	patches.suse/cifs-protect-updating-server-dstaddr-with-a-spinlock.patch
+	patches.suse/cifs-minor-update-to-comments-around-the-cifs_tcp_ses_lock-mutex.patch
 	patches.suse/mmc-sdhci-xenon-fix-annoying-1.8V-regulator-warning.patch
 	patches.suse/mmc-sdhci-pci-Fix-eMMC-driver-strength-for-BYT-based.patch
 	patches.suse/0021-dm-writecache-fix-data-corruption-when-reloading-the.patch
