--- a/series.conf
+++ b/series.conf
@@ -27386,6 +27386,7 @@
 	patches.suse/ibmvnic-Skip-fatal-error-reset-after-passive-init.patch
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
+	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
