--- a/series.conf
+++ b/series.conf
@@ -27387,6 +27387,7 @@
 	patches.suse/dp83640-reverse-arguments-to-list_add_tail.patch
 	patches.suse/tracing-add-a-vmalloc_sync_mappings-for-safe-measure.patch
 	patches.suse/ALSA-usb-audio-Add-control-message-quirk-delay-for-K.patch
+	patches.suse/Revert-ALSA-hda-realtek-Fix-pop-noise-on-ALC225.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
