--- a/series.conf
+++ b/series.conf
@@ -27884,6 +27884,7 @@
 	patches.kabi/snd_hda_bus-bus_probing-kABI-fix.patch
 	patches.kabi/ALSA-hda-kabi-workaround-for-generic-parser-flag.patch
 	patches.kabi/ALSA-snd_hda_pick_pin_fixup-kABI-workaround.patch
+	patches.kabi/snd-rawmidi-buffer_ref-kABI-workaround.patch
 
 	########################################################
 	# printk
