--- a/series.conf
+++ b/series.conf
@@ -53612,6 +53612,7 @@
 	patches.suse/ALSA-usb-audio-add-mapping-for-ASRock-TRX40-Creator.patch
 	patches.suse/ALSA-hda-realtek-Add-quirk-for-Samsung-Notebook.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-GL503VM-.patch
+	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-UX550GE-.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
