--- a/series.conf
+++ b/series.conf
@@ -53482,6 +53482,7 @@
 	patches.suse/scsi-ufs-clean-up-ufshcd_scale_clks-and-clock-scaling-error-out-path
 	patches.suse/scsi-lpfc-Change-default-SCSI-LUN-QD-to-64.patch
 	patches.suse/ALSA-pcm-oss-Fix-regression-by-buffer-overflow-fix.patch
+	patches.suse/ALSA-hda-realtek-Add-supported-new-mute-Led-for-HP.patch
 	patches.suse/ALSA-hda-Fix-potential-access-overflow-in-beep-helpe.patch
 	patches.suse/ALSA-ice1724-Fix-invalid-access-for-enumerated-ctl-i.patch
 	patches.suse/ALSA-usb-audio-Add-mixer-workaround-for-TRX40-and-co.patch
