--- a/series.conf
+++ b/series.conf
@@ -53614,6 +53614,7 @@
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-GL503VM-.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-UX550GE-.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-mic-of-ASUS-UX581LV-.patch
+	patches.suse/ALSA-hda-realtek-Add-COEF-workaround-for-ASUS-ZenBoo.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
