--- a/series.conf
+++ b/series.conf
@@ -27391,6 +27391,7 @@
 	patches.suse/ALSA-hda-realtek-Fix-S3-pop-noise-on-Dell-Wyse.patch
 	patches.suse/ALSA-rawmidi-Fix-racy-buffer-resize-under-concurrent.patch
 	patches.suse/ALSA-hda-realtek-Limit-int-mic-boost-for-Thinkpad-T5.patch
+	patches.suse/pinctrl-baytrail-Enable-pin-configuration-setting-fo.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
