--- a/series.conf
+++ b/series.conf
@@ -53550,6 +53550,7 @@
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC245.patch
 	patches.suse/ALSA-hda-Always-use-jackpoll-helper-for-jack-update-.patch
 	patches.suse/wimax-i2400m-Fix-potential-urb-refcnt-leak.patch
+	patches.suse/ipv6-fix-restrict-IPV6_ADDRFORM-operation.patch
 	patches.suse/net-mlx5-Fix-failing-fw-tracer-allocation-on-s390.patch
 	patches.suse/macvlan-fix-null-dereference-in-macvlan_device_event.patch
 	patches.suse/iwlwifi-pcie-actually-release-queue-memory-in-TVQM.patch
