--- a/series.conf
+++ b/series.conf
@@ -11741,6 +11741,7 @@
 	patches.suse/phy-work-around-phys-references-to-usb-nop-xceiv-dev.patch
 	patches.suse/workqueue-avoid-hard-lockups-in-show_workqueue_state.patch
 	patches.suse/libata-apply-max_sec_1024-to-all-liteon-ep1-series-devices.patch
+	patches.suse/i2c-core-decrease-reference-count-of-device-node-in-.patch
 	patches.suse/i2c-core-smbus-prevent-stack-corruption-on-read-I2C_.patch
 	patches.suse/Input-twl4030-vibra-fix-sibling-node-lookup
 	patches.suse/Input-twl6040-vibra-fix-child-node-lookup
