--- a/series.conf
+++ b/series.conf
@@ -26953,6 +26953,7 @@
 	patches.suse/0001-USB-misc-iowarrior-add-support-for-the-100-device.patch
 	patches.suse/serdev-ttyport-restore-client-ops-on-deregistration.patch
 	patches.suse/tty-serial-atmel-manage-shutdown-in-case-of-RS485-or.patch
+	patches.suse/vt-vt_ioctl-fix-race-in-VT_RESIZEX.patch
 	patches.suse/tty-serial-imx-setup-the-correct-sg-entry-for-tx-dma.patch
 	patches.suse/vt-selection-handle-pending-signals-in-paste_selecti.patch
 	patches.suse/vt-selection-close-sel_buffer-race.patch
