--- a/series.conf
+++ b/series.conf
@@ -53608,6 +53608,7 @@
 	patches.suse/ceph-fix-endianness-bug-when-handling-mds-session-feature-bits.patch
 	patches.suse/ceph-fix-double-unlock-in-handle_cap_export.patch
 	patches.suse/ceph-demote-quotarealm-lookup-warning-to-a-debug-message.patch
+	patches.suse/mmc-core-check-request-type-before-completing-the-request.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
