--- a/series.conf
+++ b/series.conf
@@ -53609,6 +53609,7 @@
 	patches.suse/ceph-fix-double-unlock-in-handle_cap_export.patch
 	patches.suse/ceph-demote-quotarealm-lookup-warning-to-a-debug-message.patch
 	patches.suse/mmc-core-check-request-type-before-completing-the-request.patch
+	patches.suse/mmc-core-fix-recursive-locking-issue-in-cqe-recovery-path.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
