--- a/series.conf
+++ b/series.conf
@@ -27151,6 +27151,7 @@
 	patches.suse/PCI-switchtec-Fix-init_completion-race-condition-wit.patch
 	patches.suse/irqchip-bcm2835-Quiesce-IRQs-left-enabled-by-bootloa.patch
 	patches.suse/fbdev-g364fb-Fix-build-failure.patch
+	patches.suse/vt-vt_ioctl-fix-VT_DISALLOCATE-freeing-in-use-virtua.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
