--- a/series.conf
+++ b/series.conf
@@ -27154,6 +27154,7 @@
 	patches.suse/vt-selection-introduce-vc_is_sel.patch
 	patches.suse/vt-ioctl-switch-VT_IS_IN_USE-and-VT_BUSY-to-inlines.patch
 	patches.suse/vt-vt_ioctl-fix-VT_DISALLOCATE-freeing-in-use-virtua.patch
+	patches.suse/vt-vt_ioctl-fix-use-after-free-in-vt_in_use.patch
 	patches.suse/platform-x86-pmc_atom-Add-Lex-2I385SW-to-critclk_sys.patch
 	patches.suse/mac80211-add-ieee80211_is_any_nullfunc.patch
 	patches.suse/ethtool-Factored-out-similar-ethtool-link-settings-f.patch
