--- a/series.conf
+++ b/series.conf
@@ -27402,6 +27402,7 @@
 	patches.suse/ALSA-hda-realtek-Limit-int-mic-boost-for-Thinkpad-T5.patch
 	patches.suse/pinctrl-baytrail-Enable-pin-configuration-setting-fo.patch
 	patches.suse/pinctrl-cherryview-Add-missing-spinlock-usage-in-chv.patch
+	patches.suse/x86-unwind-orc-fix-error-handling-in-_unwind_start.patch
 
 	# jejb/scsi for-next
 	patches.suse/scsi-qla2xxx-set-UNLOADING-before-waiting-for-sessio.patch
