--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1539,3 +1539,4 @@ d61acbbf54c612ea9bf67eed609494cda0857b3a # Needs extra dependency, while current
 8f8fed0cdbbd6cdbf28d9ebe662f45765d2f7d39 # git-fix that can cause stack corruption?
 84a4062632462c4320704fcdf8e99e89e94c0aba # kABI
 ff4ec2997df8fe7cc40513dbe5f86d9f88fb6be7 # removes a feature
+c7fc46fd1410a7452db29ee8cd1f85c233000ec9 # kABI, the point is removing a global variable
