--- a/series.conf
+++ b/series.conf
@@ -27740,6 +27740,8 @@
 	patches.suse/NFS-optional-NFSv4_2.patch
 	patches.suse/NFS-optional-NFSv4_2-fix.patch
 	patches.suse/NFSv4.1-bc-request-hold-xprt-ref.patch
+	patches.kabi/NFSv4-Fix-OPEN-CLOSE-race.patch
+	patches.suse/nfs-delay-fix.patch
 
 	########################################################
 	# Overlayfs
@@ -28248,7 +28250,6 @@
 
 	patches.kabi/kabi-fix-struct-ufs_reg-removal-of-unused-field
 
-	patches.kabi/NFSv4-Fix-OPEN-CLOSE-race.patch
 	patches.kabi/net-sched-act_sample-fix-psample-group-handling-on-o.patch
 
 	patches.kabi/Fix-KVM-kABI-after-x86-mmu-backports.patch
