--- a/series.conf
+++ b/series.conf
@@ -53972,6 +53972,7 @@
 	patches.suse/xfs-unsupported-features.patch
 	patches.suse/ext4-unsupported-features.patch
 	patches.suse/0001-btrfs-relocation-Fix-reloc-root-leakage-and-the-NULL.patch
+	patches.suse/0002-btrfs-relocation-Clear-the-DEAD_RELOC_TREE-bit-for-o.patch
 	patches.suse/btrfs-8888-add-allow_unsupported-module-parameter.patch
 
 	patches.suse/btrfs-qgroup-Mark-qgroup-inconsistent-if-we-re-inher.patch
