--- a/series.conf
+++ b/series.conf
@@ -27333,6 +27333,7 @@
 	patches.suse/scsi-qla2xxx-Fix-regression-warnings.patch
 	patches.suse/scsi-sg-add-sg_remove_request-in-sg_common_write
 	patches.suse/ext4-use-non-movable-memory-for-superblock-readahead.patch
+	patches.suse/ext4-do-not-zeroout-extents-beyond-i_disksize.patch
 	patches.suse/objtool-fix-switch-table-detection-in-text-unlikely.patch
 	patches.suse/objtool-make-bp-scratch-register-warning-more-robust.patch
 	patches.suse/x86-resctrl-Fix-invalid-attempt-at-removing-the-defa.patch
