--- a/series.conf
+++ b/series.conf
@@ -27303,6 +27303,7 @@
 	patches.suse/s390-cio-avoid-duplicated-add-uevents
 	patches.suse/s390-cio-generate-delayed-uevent-for-vfio-ccw-subchannels
 	patches.suse/block-fix-busy-device-checking-in-blk_drop_partition.patch
+	patches.suse/block-fix-busy-device-checking-in-blk_drop_partition-again.patch
 	patches.suse/libata-Return-correct-status-in-sata_pmp_eh_recover_.patch
 	patches.suse/scsi-lpfc-fix-crash-in-target-side-cable-pulls-hitting-wait_for_unreg
 	patches.suse/scsi-ufs-clean-up-ufshcd_scale_clks-and-clock-scaling-error-out-path
